--- a/client/src/pages/LogIn/Login.css
+++ b/client/src/pages/LogIn/Login.css
@@ -1,5 +1,7 @@
 .Login {
+    background-color:rgb(253,253,229);
     display: flex;
     align-items: center;
     justify-content: center;
+    color: rgb(42,86,158);
 }
