--- a/client/src/pages/Signup/SignUp.css
+++ b/client/src/pages/Signup/SignUp.css
@@ -1,6 +1,8 @@
 .Signup {
+    background-color:rgb(253,253,229);
     display: flex;
     align-items: center;
     justify-content: center;
+    color: rgb(42,86,158);
 }
 
