--- a/client/src/pages/MyProfile/My Profile.css
+++ b/client/src/pages/MyProfile/My Profile.css
@@ -55,6 +55,10 @@
     background-color: white;
 }
 
+.divForm .hidden {
+    display: contents; 
+}
+
 @media (max-width:600px) {
     .generalInfo, .workInfo{
         display: flex;
