--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -1,42 +1,37 @@
 /* section one */
 
-.section-one{
-    background-color:rgb(253,253,229);
-    height: 535px;
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    flex-direction: column;
-  }
+.section-one {
+  background-color: rgb(249, 249, 247);
+  height: 535px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  flex-direction: column;
+}
 
-  .home-h1{
-      color: rgb(42,86,158);
-      display: flex;
-      align-self:center;
-      padding-left: 8px;
-      background-color: rgba(255,176,119,.4);
-      transform: skew(9deg,0deg);
-  }
-  
-  .logo{
-      display: flex;
-      align-self: center;
-      width:200px;
-      height: 200px;
-      padding-bottom: 30px;
+.teamwork-img{
+  padding-top: 60px;
+  display: flex;
+  align-self: center;
+  padding-bottom: 30px;
+}
 
-  }
-  
 /* section two */
 
-  .section-two{
-    background-color:rgba(255,176,119,.4); 
-    height: 500px;
-    padding-top: 4px;
-  
-  }
+.section-two {
+  background-color: rgba(255, 176, 119, 0.4);
+  height: 500px;
+  margin-top: 20px;
+  flex-direction: column;
+}
 
-  .homeImage{
-    width: 800px;
-  }
- 
+.home-h4 {
+  color:rgb(59, 58, 58);
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+  background-color: rgba(255, 176, 119, 0.4);
+  transform: skew(9deg, 0deg);
+}
+
+
