time off: form front & back

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,9 @@
 
 }
 
-.App-logo {
+/* No se usa */
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -13,9 +15,10 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
-.App-header {
+
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,17 +27,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
