--- a/client/src/components/Cards/Cards.css
+++ b/client/src/components/Cards/Cards.css
@@ -9,12 +9,11 @@
   margin-right: 20px;
   justify-content: center;
   margin-left: 20px;
+  color:rgb(59, 58, 58);
+
 }
 
   
-.card-item{
-    color: #9695F0 ;
-   
-}
+
 
 
