--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -25,7 +25,7 @@
   flex-direction: column;
 }
 
-.home-h4 {
+.introduction-h4 {
   color:rgb(59, 58, 58);
   display: flex;
   justify-content: center;
@@ -35,4 +35,43 @@
   transform: skew(9deg, 0deg);
 }
 
+/* section three */
 
+.side{
+  display:inline-block;;
+  width: 40px;
+  height: 40px;
+  z-index: -10;
+  align-items: center;
+  margin-left: 300px;
+  margin-top: 30px;
+
+}
+
+.mission-img{
+  display: flex;
+  align-items: center;
+
+}
+
+
+.circle {
+  width: 24rem;
+	height: 24rem;
+	border-radius: 50%;
+  background:rgba(255, 176, 119, 0.705);
+	display: flex;
+	justify-content: center;
+  flex-direction: column;
+	text-align: center;
+  margin:0px auto;
+  padding:3%;
+
+
+}
+
+.mission-text{
+  color:rgb(59, 58, 58);
+  font-size: 1rem;
+	font-weight: bold;
+}
