--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -14,6 +14,9 @@
   display: flex;
   align-self: center;
   padding-bottom: 30px;
+  max-width: 100vw;
+  object-fit: cover;
+  height: 100%;
 }
 
 /* section two */
@@ -32,7 +35,7 @@
   padding-top: 20px; 
   padding-bottom: 20px; 
   background-color: rgba(255, 176, 119, 0.4);
-  transform: skew(9deg, 0deg);
+  transform: skew(9deg, 0deg); /*En mobile genera un leve desajuste*/
 }
 
 
