--- a/client/src/components/Cards/Cards.css
+++ b/client/src/components/Cards/Cards.css
@@ -4,11 +4,12 @@
   width: 400px;
   height: 200px;
   text-align: center;
-  margin-top: 130px;
-  padding-top: 20px;
+  align-items: center;
   margin-right: 20px;
-  justify-content: center;
-  margin-left: 20px;
+  margin-top: 35px;
+  margin-bottom: 18px;
+  padding-top: 20px;
+
   color:rgb(59, 58, 58);
 
 }
