--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -14,15 +14,18 @@
   display: flex;
   align-self: center;
   padding-bottom: 30px;
+  max-width: 100vw;
+  object-fit: cover;
+  height: 100%;
 }
 
 /* section two */
 
 .section-two {
   background-color: rgba(255, 176, 119, 0.4);
-  height: 500px;
   margin-top: 20px;
   flex-direction: column;
+  justify-items: center;
 }
 
 .introduction-h4 {
@@ -32,15 +35,15 @@
   padding-top: 20px; 
   padding-bottom: 20px; 
   background-color: rgba(255, 176, 119, 0.4);
-  transform: skew(9deg, 0deg);
+  transform: skew(deg, 0deg);
 }
 
 /* section three */
 
 .side{
   display:inline-block;;
-  width: 40px;
-  height: 40px;
+  /* width: 40px;
+  height: 40px; */
   z-index: -10;
   align-items: center;
   margin-left: 300px;
