--- a/client/src/components/Cards/Cards.css
+++ b/client/src/components/Cards/Cards.css
@@ -5,10 +5,13 @@
   height: 200px;
   text-align: center;
   align-items: center;
-  margin-right: 20px;
-  margin-top: 35px;
-  margin-bottom: 18px;
+  margin: 0 auto;
+  /* margin-right: 20px;
+   margin-top: 35px; 
+  margin-bottom: 18px;  */
+ 
   padding-top: 20px;
+
 
   color:rgb(59, 58, 58);
 
