--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -44,8 +44,10 @@
   display:inline-block;;
   /* width: 40px;
   height: 40px; */
-  z-index: -10;
-  align-items: center;
+  
+  /* align-items: center; */
+  display:flex;
+  flex-wrap: wrap;
   margin-left: 300px;
   margin-top: 30px;
 
@@ -53,8 +55,14 @@
 
 
 .mission-img{
+  padding-top: 60px;
   display: flex;
-  align-items: center;
+  align-self: center;
+  padding-bottom: 30px;
+  max-width: 100vw;
+  object-fit: cover;
+  height: 100%;
+
 
 } 
 
