--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -15,7 +15,7 @@
   align-self: center;
   padding-bottom: 30px;
   max-width: 100vw;
-  object-fit: cover;
+  /* object-fit: cover; */
   height: 100%;
 }
 
