--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,54 +1,4 @@
-nav {
-  display: flex;
-  padding: 1em;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  background:rgb(249,249,247);
-  font-weight: 600;
-}
-
-.logo{
-  width: 70px;
-  height: 50px;
-}
-
-
-.nav__projectName {
-  color:rgb(59, 58, 58);
-  text-decoration: none;
-}
-
-.authLink {
-  color:rgb(59, 58, 58);
-  text-decoration: none;
-  transition: color 0.2s ease-in-out;
-}
-
-.authLink + .authLink {
-  padding: 1em;
-}
-
-.authLink:hover {
-  color: #FE3B00
-}
-
-.nav-logoutbtn {
-  font-family: inherit;
-  font-weight: inherit;
-  padding: 0.5em 1em;
-  margin-left: 1em;
-  background-color: #FEDB74;
-  box-shadow: 0 0 5px 0 aliceblue;
-  border: none;
-  border-radius: 2px;
-  cursor: pointer;
-  color:rgb(59, 58, 58);
-  transition: all 0.2s ease-in-out;
-  position: sticky;
-  top: 0;
-}
-
-.nav-logoutbtn:hover {
-  transform: scale(1.05);
-  background-color: #d13e3e;
+.Navbar {
+  padding:0em 1em;
+  
 }
