--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -7,6 +7,9 @@
  justify-content: center;
   align-self: center;
   flex-direction: column;
+  width: 100%;
+  max-width: 100vw;
+
 }
 
 .teamwork-img{
@@ -14,7 +17,7 @@
   display: flex;
   align-self: center;
   padding-bottom: 30px;
-  max-width: 100vw;
+  max-width: 600px;
   object-fit: cover;
   height: 100%;
 }
@@ -42,13 +45,11 @@
 /* section three */
 
 .side{
-  display:inline-block;;
-  /* width: 40px;
-  height: 40px; */
+  display:inline-block;
   z-index: -10;
   align-items: center;
-  margin-left: 300px;
-  margin-top: 30px;
+  /* margin-left: 300px;
+  margin-top: 30px; */
 
  }
 
