--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Righteous&family=Thasadith:wght@700&display=swap');
+
 body {
-  background-color:rgb(249,249,247);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
