--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -1,80 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Righteous&family=Thasadith:wght@700&display=swap');
 /* section one */
 
+.Home {
+  display: inline-flex;
+  flex-direction: column;
+  /* background-color: thistle; */
+  width: 70vw;
+}
+
 .section-one {
-  background-color: rgb(249, 249, 247);
+  display: flex;
+  flex-direction: column;
+  /* background-color: burlywood; */
+}
+
+.section-one .title {
+  font-family: 'Thasadith', sans-serif;
+  font-size: 3em;
+  font-weight: 900;
   text-align: center;
-  height: 535px;
+}
+
+.section-one .image-container {
+  width: 80%;
+}
+.section-one .teamwork-img {
   width: 100%;
 }
 
-.teamwork-img {
-  padding-top: 60px;
-  padding-bottom: 30px;
-  max-width: 100%;
-  object-fit: cover;
-  height: 100%;
+.section-one .container {
+  /* background-color: cadetblue; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section-one .text-container {
+  /* background-color: chartreuse; */
+  width: 90%;
+  margin: 0 3% 0 3%;
+}
+
+.section-one .text-container p {
+  font-size: 1.3em;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* section two */
 
 .section-two {
-  background-color: rgba(255, 176, 119, 0.4);
-  margin-top: 20px;
-  flex-direction: column;
-  justify-items: center;
+  display: flex;
 }
 
-.introduction-h4 {
-  color: rgb(59, 58, 58);
+.image-container {
+  width: 50%;
   display: flex;
   justify-content: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: rgba(255, 176, 119, 0.4);
-
-  transform: skew(deg, 0deg);
+  align-items: center;
 }
 
-/* section three */
-
-.side {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 30px;
-  justify-content: center;
+.image {
+  width: 80%;
 }
 
-.mission-img {
-  padding-top: 60px;
-  display: flex;
-  align-self: center;
-  padding-bottom: 30px;
-  max-width: 100vw;
-  object-fit: cover;
-  height: 100%;
-}
-
-.circle {
-  width: 24em;
-  height: 24em;
-  border-radius: 50%;
-  background: rgba(255, 176, 119, 0.705);
+.text-container {
+  width: 50%;
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  align-items: center;
+
+}
+
+.text-container p {
+  font-size: 1.3em;
   text-align: center;
-  padding: 3%;
-}
-
-.mission-text {
-  color: rgb(59, 58, 58);
-  font-size: 1rem;
-  font-weight: bold;
-}
-
-/* section four */
-
-.section-four {
-  height: 500px;
-  margin-top: 300px;
+  font-family: 'Poppins', sans-serif;;
 }
