style and tasks page changes

--- a/client/src/pages/MyProfile/My Profile.css
+++ b/client/src/pages/MyProfile/My Profile.css
@@ -23,7 +23,7 @@ My profile.css
     margin-bottom: 3%;
     align-content: center;
     justify-content: center;
-    background-color: #f5f5f5;
+    background-color:#D8DDEE;
     border-radius: 10px;
 }
 .divForm form label {
